--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="big-spinner"></div>
         </div>
         <div class="upload-section">
-            <input type="file" id="imageInput" accept="image/*" multiple>
+            <input type="file" id="imageInput" accept="image/*,video/*" multiple>
             <div id="imagePreview" class="image-preview"></div>
             <select id="titleSelect" style="margin: 10px 0;">
                 <option value="">Select title for upload</option>
