--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         <div class="upload-section">
             <input type="file" id="imageInput" accept="image/*,video/*" multiple>
             <div id="imagePreview" class="image-preview"></div>
-            <select id="titleSelect" style="margin: 10px 0;">
-                <option value="">Select title for upload</option>
-            </select>
+            <div class="search-container" style="margin: 10px 0;">
+                <input type="text" id="titleInput" placeholder="Search or select title for upload..." autocomplete="off">
+                <div id="titleSuggestions" class="suggestions-dropdown" style="display: none;"></div>
+            </div>
             <button id="createTitleBtn" style="margin: 10px 0;">Create New Title</button>
             <button id="uploadBtn" style="display: none;">Upload Images</button>
             <button id="clearAllBtn" style="display: none; margin-left: 10px; background-color: #dc3545;">Clear All</button>
@@ -41,9 +42,10 @@
             <h2>Uploaded Images</h2>
             <div class="search-section">
                 <button id="openManageModalBtn">Manage Titles</button>
-                <select id="searchSelect">
-                    <option value="">Select title</option>
-                </select>
+                <div class="search-container">
+                    <input type="text" id="searchInput" placeholder="Search or select title..." autocomplete="off">
+                    <div id="suggestions" class="suggestions-dropdown" style="display: none;"></div>
+                </div>
                 <button id="bulkDeleteBtn" style="display: none; background-color: #dc3545; margin-left: 10px;">Delete Selected</button>
             </div>
             <div id="imagesContainer"></div>
@@ -69,9 +71,10 @@
             <span class="close" id="closeManageModal">&times;</span>
             <h3>Title Management</h3>
             <div style="margin-bottom: 15px;">
-                <select id="oldTitleSelect">
-                    <option value="">Select old title</option>
-                </select>
+                <div class="search-container">
+                    <input type="text" id="oldTitleInput" placeholder="Search or select old title..." autocomplete="off">
+                    <div id="oldTitleSuggestions" class="suggestions-dropdown" style="display: none;"></div>
+                </div>
             </div>
             <div style="margin-bottom: 15px;">
                 <textarea id="newTitleInput" placeholder="New title"></textarea>
