--- a/web-view/view.html
+++ b/web-view/view.html
@@ -396,7 +396,7 @@
                     video.preload = 'metadata'; // Load metadata for better performance
 
                     // Resize video to fit within 90% width and 90% height limits
-                    video.onload = function() {
+                    video.onloadedmetadata = function() {
                         const screenWidth = window.innerWidth;
                         const screenHeight = window.innerHeight;
                         const maxWidth = screenWidth * 0.9;
@@ -405,26 +405,19 @@
                         const videoWidth = this.videoWidth;
                         const videoHeight = this.videoHeight;
 
-                        // If video width is smaller than 50% of screen width, don't resize
-                        if (videoWidth < screenWidth * 0.5) {
+                        // Always calculate scale to fit within 90%
+                        const scaleW = maxWidth / videoWidth;
+                        const scaleH = maxHeight / videoHeight;
+                        const scale = Math.min(scaleW, scaleH);
+
+                        if (scale < 1) {
+                            this.style.width = (videoWidth * scale) + 'px';
+                            this.style.height = (videoHeight * scale) + 'px';
+                        } else {
                             this.style.width = videoWidth + 'px';
                             this.style.height = 'auto';
-                            this.style.maxWidth = '100%';
-                        } else {
-                            // Calculate scale factors
-                            const scaleW = maxWidth / videoWidth;
-                            const scaleH = maxHeight / videoHeight;
-                            const scale = Math.min(scaleW, scaleH);
-
-                            // Apply scaling if needed
-                            if (scale < 1) {
-                                this.style.width = (videoWidth * scale) + 'px';
-                                this.style.height = (videoHeight * scale) + 'px';
-                            } else {
-                                this.style.width = videoWidth + 'px';
-                                this.style.height = 'auto';
-                                this.style.maxWidth = '90%';
-                            }
+                            this.style.maxWidth = '90%';
+                            this.style.maxHeight = '90%';
                         }
                     };
 
@@ -447,26 +440,19 @@
                         const imageNaturalWidth = this.naturalWidth;
                         const imageNaturalHeight = this.naturalHeight;
 
-                        // If image width is smaller than 50% of screen width, don't resize
-                        if (imageNaturalWidth < screenWidth * 0.5) {
+                        // Always calculate scale to fit within 90%
+                        const scaleW = maxWidth / imageNaturalWidth;
+                        const scaleH = maxHeight / imageNaturalHeight;
+                        const scale = Math.min(scaleW, scaleH);
+
+                        if (scale < 1) {
+                            this.style.width = (imageNaturalWidth * scale) + 'px';
+                            this.style.height = (imageNaturalHeight * scale) + 'px';
+                        } else {
                             this.style.width = imageNaturalWidth + 'px';
                             this.style.height = 'auto';
-                            this.style.maxWidth = '100%';
-                        } else {
-                            // Calculate scale factors
-                            const scaleW = maxWidth / imageNaturalWidth;
-                            const scaleH = maxHeight / imageNaturalHeight;
-                            const scale = Math.min(scaleW, scaleH);
-
-                            // Apply scaling if needed
-                            if (scale < 1) {
-                                this.style.width = (imageNaturalWidth * scale) + 'px';
-                                this.style.height = (imageNaturalHeight * scale) + 'px';
-                            } else {
-                                this.style.width = imageNaturalWidth + 'px';
-                                this.style.height = 'auto';
-                                this.style.maxWidth = '90%';
-                            }
+                            this.style.maxWidth = '90%';
+                            this.style.maxHeight = '90%';
                         }
                     };
 
